# Agentic-Event-Store-Enterprise-Audit-Infrastructure

./: .gitignore  DESIGN.md  DOMAINNOTES.md  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: __init__.py  event_store.py  init_db.py  load_seed_events.py  projection_schema.sql  schema.sql
src/aggregates/: __init__.py  agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: handlers.py
src/config/: model_versions.json
src/integrity/: audit_chain.py  gas_town.py
src/mcp/: core.py  resources.py  server.py  tools.py
src/models/: aggregates.py  commands.py  events.py
src/projections/: agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
src/upcasting/: registry.py  setup.py  upcasters.py
tests/: __init__.py  test_agent_session.py  test_audit_ledger.py  test_compliance_record.py  test_concurrency.py  test_integrity.py  test_loan_application.py  test_mcp_lifecycle.py  test_projections.py  test_upcasting.py
