# pyproject.toml

[project]
name = "the-ledger"
version = "0.1.0"
description = "Agentic Event Store & Enterprise Audit Infrastructure." 
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "black>=26.3.1",
    "coverage>=7.13.5",
    "cryptography>=46.0.5",
    "dataclasses-json>=0.6.7",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "flake8>=7.3.0",
    "hypothesis>=6.151.9",
    "isort>=8.0.1",
    "jsonb>=1.0.0",
    "kafka>=1.3.5",
    "listen>=0.2.1",
    "logging>=0.4.9.6",
    "marten>=0.6.1",
    "mcp>=1.26.0",
    "migrations>=0.1.1",
    "networkx>=3.6.1",
    "orjson>=3.11.7",
    "pre-commit>=4.5.1",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.3.0",
    "sql>=2022.4.0",
    "structlog>=25.5.0",
    "typing-extensions>=4.15.0",
    "uuid>=1.30",
    "uvicorn>=0.42.0",
    "yamllint>=1.38.0",
]


[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "E402"]
exclude = [".venv", "venv", "env"]

[tool.yamllint]
extends = "default"

[tool.yamllint.rules.truthy]
level = "warning"
allowed-values = ["true", "false"]


[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]
